--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,18 +15,15 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{:href => "#"} DocTalk
+          = link_to "Doctalk", root_path, class: "navbar-brand"
         / Collect the nav links, forms, and other content for toggling
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           %ul.nav.navbar-nav
-            %li.active
-              %a{:href => "#"}
-                About Us
-                %span.sr-only (current)
             %li
-              %a{:href => "#"} Browse
+              = link_to "Browse", provider_index_path
             %li
-              %a{:href => "#"} Share
+              = link_to "Share", new_provider_path
             %li
               %a{:href => "#"} Login / Sign Up
-    = yield
+    .container
+      = yield
