Shimple farm! Pretty seeds! Yay!

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,9 +20,9 @@
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li
-              = link_to "Browse", provider_index_path
+              = link_to "Browse", providers_path
             %li
-              = link_to "Share", new_provider_path
+              = link_to "Share", provider_new_path
             %li
               %a{:href => "#"} Login / Sign Up
     .container
