--- a/app/views/provider/index.html.haml
+++ b/app/views/provider/index.html.haml
@@ -1,2 +1,8 @@
-%h1 Provider#index
-%p Find me in app/views/provider/index.html.haml
+%table.table.table-bordered
+  %tr
+    %td First Name
+    %td Last Name
+  - @providers.each do |p|
+    %tr
+      %td= p.first_name
+      %td= p.last_name
