--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,13 @@
               = link_to "Browse", providers_path
             %li
               = link_to "Share", new_provider_path
-            %li
-              = link_to "Login / Sign Up", new_user_session_path
+            - if user_signed_in?
+              %li
+                = link_to('Logout', destroy_user_session_path, :method => :delete)
+            - else
+              %li
+                = link_to('Login', new_user_session_path)
+              %li
+                = link_to('Sign Up', new_user_registration_path)
     .container
       = yield
