--- a/app/views/providers/form.html.haml
+++ b/app/views/providers/form.html.haml
@@ -13,7 +13,7 @@
       = f.input :postal_code
       = f.input :city
       = f.input :province
-      = f.input :phone
-      = f.input :waiting_period
+      = f.input :phone, :size => 10, :maxlength => 10
+      = f.input :waiting_period, :collection => [[' Less than 1 Month', 0], [' 1 Month', 1], ['2 Months', 2], ['3 Months', 3], ['4 Months', 4], ['5 Months', 5], ['6 Months', 6], ['7 Months', 7], ['8 Months', 8], ['9 Months', 9], ['10 Months', 10], ['11 Months', 11], ['12 Months', 12], ['Over 12 Months', 13]], prompt: "Select"
   .row
     = f.submit "Save"
