--- a/app/views/providers/show.html.haml
+++ b/app/views/providers/show.html.haml
@@ -1,1 +1,15 @@
-show.html.haml
+.provider-info
+  / = image_tag @provider.image_url(:avatar)
+  .provider-details
+    %p.provider-detail-name
+      = @provider.first_name
+      = @provider.last_name
+    %p.provider-detail
+      Address: #{@provider.full_address}
+    %p.provider-detail
+      Kind: #{@provider.kind}
+    %p.provider-detail
+      Phone Number: #{@provider.phone}
+    %p.provider-detail
+      Average Waiting Period: #{@provider.waiting_period} Months
+  
