Changed Signup to Create Account

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,6 @@
               %li
                 = link_to('Login', new_user_session_path)
               %li
-                = link_to('Sign Up', new_user_registration_path)
+                = link_to('Create Account', new_user_registration_path)
     .container
       = yield
