--- a/app/views/providers/index.html.haml
+++ b/app/views/providers/index.html.haml
@@ -1,7 +1,19 @@
-- @providers.each do |provider|
-  = link_to provider_path(provider.id) do
-    %p.provider-index
-      = provider.organization_name
-      |
-      \#{provider.first_name}
-      \#{provider.last_name}
+.row
+  .col-md-6
+    %h1 Organizations
+    %br
+    - @people.each do |provider|
+      = link_to provider_path(provider.id) do
+        %p.provider-index
+          = provider.organization_name
+
+  .col-md-6
+    %h1 Specialists
+    %br
+    - @places.each do |provider|
+      = link_to provider_path(provider.id) do
+        %p.provider-index
+          = provider.organization_name
+          |
+          \#{provider.first_name}
+          \#{provider.last_name}
