--- a/app/views/providers/index.html.haml
+++ b/app/views/providers/index.html.haml
@@ -2,18 +2,16 @@
   .col-md-6
     %h1 Organizations
     %br
-    - @people.each do |provider|
+    - @places.each do |provider|
       = link_to provider_path(provider.id) do
         %p.provider-index
-          = provider.organization_name
+          = provider.name
 
   .col-md-6
     %h1 Specialists
     %br
-    - @places.each do |provider|
+    - @people.each do |provider|
       = link_to provider_path(provider.id) do
         %p.provider-index
-          = provider.organization_name
-          |
           \#{provider.first_name}
           \#{provider.last_name}
