Added styling with css, as well as a logo, reorganizaed layout of bootstrap, and added better css selectors

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,23 @@
-%h1 docTALK
+.body
+  .index-header
+    .logo
+      %img.logo-image{:alt => "Doctalk", :src => "/images/doctalk5.svg"}/
+.container
+  .row
+    .col-xs-12.col-md-4
+      .index-detail
+        .index-detail-header
+          Care Beyond the Binary:
+        %p.index-detail-paragraph
+          For people who are transgender access to primary, emergency,
+          and transition-related health care is often problematic. Individuals who do not subscribe to prevailing societal expectations are often informationally and institutionally erased. Trans patients are not an anomaly, thus the information required to gain access to safe and knowledgable trans healthcare should not be either.
+    .col-xs-12.col-md-4
+      .index-detail
+        Our Goal:
+        %p.index-detail-paragraph
+          Finding viable healthcare options is often a primary concern of individuals seeking trans related healthcare. We want to provide an outlet to share the experieces of the trans community and assist in the establishment of a more hopeful future for trans patients.
+    .col-xs-12.col-md-4
+      .index-detail
+        Getting Started:
+        %p.index-detail-paragraph
+          Education is the most powerful weapon you can use to change the world. It goes beyond a classroom and speaks to the experiences of not only the many, but the few.  This is a platform in which you can share your experinces to help your community, and begin the deconstruction of cisnormative policies and practices regarding your health.
