--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
+    %link{:href => "http://fonts.googleapis.com/css?family=Slabo+27px", :rel => "stylesheet", :type => "text/css"}/
   %body{ class: "#{controller_name} #{action_name}"}
     %nav.navbar.navbar-default
       .container-fluid
@@ -35,7 +36,7 @@
                 = link_to('Login', new_user_session_path)
               %li
                 = link_to('Create Account', new_user_registration_path)
-    .container
-      - flash.each do |name, msg|
-        = content_tag :div, msg, class: "alert alert-info"
-      = yield
+  .container
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: "alert alert-info"
+  = yield
