--- a/app/views/providers/form.html.haml
+++ b/app/views/providers/form.html.haml
@@ -1,20 +1,21 @@
-= simple_form_for(Provider.new) do |f|
-  .row
-    .col-md-
-      = f.input :kind, collection: %w[Doctor Counsellor Surgeon], include_blank: false
-  .row
-    .col-md-6
-      = f.input :first_name
-      = f.input :last_name
-      = f.input :address_line1
-      = f.input :address_line2
-    .col-md-6
-      = f.input :postal_code
-      = f.input :city
-      = f.input :province
-      = f.input :phone, :size => 10, :maxlength => 10
-      = f.input :waiting_period, :collection => [[' Less than 1 Month', 0], [' 1 Month', 1], ['2 Months', 2], ['3 Months', 3], ['4 Months', 4], ['5 Months', 5], ['6 Months', 6], ['7 Months', 7], ['8 Months', 8], ['9 Months', 9], ['10 Months', 10], ['11 Months', 11], ['12 Months', 12], ['Over 12 Months', 13]], prompt: "Select"
-      / = f.file_field :image
-      = f.file_field :image, :label => "Upload Image"
-      = f.input :remote_image_url, :label => "or Image URL"
-      = f.submit "Save"
+.container
+  = simple_form_for(Provider.new) do |f|
+    .row
+      .col-md-
+        = f.input :kind, collection: %w[Doctor Counsellor Surgeon], include_blank: false
+    .row
+      .col-md-6
+        = f.input :first_name
+        = f.input :last_name
+        = f.input :address_line1
+        = f.input :address_line2
+        = f.input :city
+        = f.input :province
+      .col-md-6
+        = f.input :postal_code
+        = f.input :phone, :size => 10, :maxlength => 10
+        = f.input :waiting_period, :collection => [[' Less than 1 Month', 0], [' 1 Month', 1], ['2 Months', 2], ['3 Months', 3], ['4 Months', 4], ['5 Months', 5], ['6 Months', 6], ['7 Months', 7], ['8 Months', 8], ['9 Months', 9], ['10 Months', 10], ['11 Months', 11], ['12 Months', 12], ['Over 12 Months', 13]], prompt: "Select"
+        / = f.file_field :image
+        = f.file_field :image, :label => "Upload Image"
+        / = f.input :remote_image_url, :label => "or Image URL"
+        = f.submit "Save"
